Got individuals decoding correctly

--- a/CB_Assignment2.ipynb
+++ b/CB_Assignment2.ipynb
@@ -28,7 +28,7 @@
       },
       "outputs": [],
       "source": [
-        "genomesize = 100\n",
+        "genomesize = 102\n",
         "RNAcharacters = 'UGCA'\n",
         "#mutationProb = 2\n",
         "randomIndividuals = []\n",
@@ -38,6 +38,7 @@
         "    self.generation = generation\n",
         "    self.fitness = 0\n",
         "    self.genome = []  #going to be an array of values eventually so define an empty array to begin\n",
+        "    self.decoded_genome = None\n",
         "    for i in range(0,genomesize):\n",
         "      self.genome.append(random.choice(RNAcharacters))  #pulls elements from DNAcharacter string\n",
         "    self.calcFitness()\n",
@@ -110,7 +111,12 @@
         "  def __str__(self):\n",
         "    output = \"\"\n",
         "    for c in self.genome:\n",
-        "      output = output + c\n",
+        "        output = output + c\n",
+        "    \n",
+        "    if self.decoded_genome != None:\n",
+        "      output += \" \"\n",
+        "      for c in self.decoded_genome:\n",
+        "        output = output + c\n",
         "    output += \" \"\n",
         "    output += \"fitness: \"\n",
         "    output += str(self.fitness)\n",
@@ -144,7 +150,10 @@
         "  def generational(self, n, t):\n",
         "    self.current_gen += 1\n",
         "    if self.current_gen % 3 == 1:\n",
-        "      randomIndividuals.append(copy.deepcopy((self.the_pop[randint(0,popsize-1)])))\n",
+        "      randomIndividuals.append(\n",
+        "        \n",
+        "        copy.deepcopy((self.the_pop[randint(0,popsize-1)]))\n",
+        "        )\n",
         "    tempPop = population()\n",
         "    for i in range(0, popsize, 2):    #needs an even pop size\n",
         "      parent = self.tournament(t) #select, returns an index\n",
@@ -206,7 +215,11 @@
       "outputs": [],
       "source": [
         "def decode(s):  # decodes each codon into a single char amino acid\n",
-        "    match s:\n",
+        "    string = \"\"\n",
+        "    for char in s:\n",
+        "        string += char\n",
+        "    # print(s)\n",
+        "    match string:\n",
         "        case 'AAA' | 'AAG': #lys\n",
         "            return 'k'\n",
         "        case 'AAU' | 'AAC': # Asn\n",
@@ -256,7 +269,20 @@
         "        case 'UGG': # Trp,  \n",
         "            return 'w'\n",
         "        case _:\n",
-        "            print(\"Unidentified codon\")"
+        "            # print(\"Unidentified codon\")\n",
+        "            return '?'\n",
+        "\n",
+        "# print(decode(['A','A','A']))\n",
+        "\n",
+        "def decode_genome(individual):\n",
+        "    i = 0\n",
+        "    length = len(individual.genome)\n",
+        "    decoded_genome = []\n",
+        "    while i < length:\n",
+        "        decoded_protein = decode(individual.genome[i:i+3])\n",
+        "        decoded_genome.append(decoded_protein)\n",
+        "        i += 3\n",
+        "    individual.decoded_genome = decoded_genome"
       ]
     },
     {
@@ -316,6 +342,7 @@
       "source": [
         "# print(randomIndividuals)\n",
         "for ind in randomIndividuals:\n",
+        "    decode_genome(ind)\n",
         "    print(ind)"
       ]
     },
